# bayesian-optimization

./: Dockerfile  README.md  app.py  bayesian_optimization.py  make_plot.py  pyproject.toml
.github/workflows/: build-and-deploy.yml
